Fix #792: replace repackaged ConcurrentLinkedHashMap by new LruCache Fix #828: remove view scope only after destroying all beans just in case